[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xhs-cli-export"
version = "0.1.0"
description = "Export Xiaohongshu favorites/likes to Markdown with incremental sync"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "yuyitian" },
]
keywords = ["xiaohongshu", "xhs", "export", "markdown", "cli", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/yuyitian/xhs-cli-export"
Repository = "https://github.com/yuyitian/xhs-cli-export"
Issues = "https://github.com/yuyitian/xhs-cli-export/issues"
Documentation = "https://github.com/yuyitian/xhs-cli-export#readme"

[project.scripts]
xhs-export = "xhs_export:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
